# ObjectDetectionYOLO26

./: .gitignore  README.md
coco/: data.yaml
configs/: train_volleyball.yaml
configs/deploy/: agx_zed_yolo26.yaml  camera_pose.yaml
deploy/agx_zed/: CMakeLists.txt  README.md
deploy/agx_zed/build-ninja/: CMakeCache.txt  DartConfiguration.tcl
deploy/agx_zed/include/camera/: camera_model.h  zed_camera.h
deploy/agx_zed/include/common/: config_loader.h  types.h  visualization.h
deploy/agx_zed/include/detector/: detector.h  postprocess.h  trt_engine.h
deploy/agx_zed/include/geometry/: depth_sampler.h  projection.h  world_transform.h
deploy/agx_zed/include/pipeline/: ball_pipeline.h
deploy/agx_zed/src/: main.cpp
deploy/agx_zed/src/camera/: zed_camera.cpp
deploy/agx_zed/src/common/: config_loader.cpp  visualization.cpp
deploy/agx_zed/src/detector/: detector.cpp  postprocess.cpp  trt_engine.cpp
deploy/agx_zed/src/geometry/: depth_sampler.cpp  projection.cpp  world_transform.cpp
deploy/agx_zed/src/pipeline/: ball_pipeline.cpp
deploy/agx_zed/tests/: test_config_loader.cpp  test_geometry.cpp  test_pipeline_runtime.cpp  test_postprocess.cpp  test_runtime_overlay.cpp
docs/: 01_训练环境搭建与训练步骤.md  02_部署推理文档.md  03_仓库文件夹架构规范.md
scripts/: export_onnx.py  infer_volleyball.py  prepare_dataset.py  train_volleyball.py
tests/: test_export_onnx.py  test_infer_volleyball.py
